# redcell

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  pyproject.toml
docs/: index.html
fixtures/demo-app/: README.md
fixtures/golden/: README.md
redcell/: __init__.py  cli.py  generator.py  llm.py  sandbox.py  scanner.py  verifier.py
redcell/generator/: __init__.py  generate.py  models.py  story.py  templates.py
redcell/ingest/: __init__.py  acquire.py  filters.py  models.py  parser.py  pipeline.py  store.py
redcell/scan/: __init__.py  candidates.py  confirm.py  findings.py  runner.py  sources_sinks.py
redcell/verifier/: __init__.py  agent.py  http_tool.py  models.py  payloads.py
tests/: conftest.py  test_candidates.py  test_filters.py  test_generator.py  test_parser.py  test_pipeline.py  test_scan.py  test_sources_sinks.py  test_store.py  test_verifier.py
tests/sample_repo/pkg/: math_utils.py  service.py
tests/vuln_repo/app/: llm.py  routes.py  safe.py  service.py
